# ML-in-Finance-I-case-study-forecasting-tax-avoidance-rates

./: README.md  main.py  pyproject.toml  requirements.txt  requirements_pypi.txt
data/input/: tax_avoidance.dta
data/input/external_dataset_part1/: external_dataset_part1.csv
data/input/external_dataset_part2/: ^cac_y.csv  ^dax_y.csv  a5_c_y.csv  wig_y.csv  x_f_y.csv
data/input/external_dataset_part3/: S&P 500 Consumer Discretionary.xlsx  S&P 500 Consumer Staples.xlsx  S&P 500 Energy.xlsx  S&P 500 Health Care.xlsx  S&P 500 Industrial.xlsx  S&P 500 Information Technology.xlsx  S&P 500 Materials.xlsx  S&P 500 Real Estate.xlsx  S&P 500 Utilities.xlsx  S&P 500.xlsx
data/models_output/: arma.csv  naive.csv
data/output/: feature_ranking.xlsx  test.csv  test_fe.csv  train.csv
models/: ardl.sav  knn.sav  minmaxscaler.sav  ols.sav  standardscaler.sav  svr.sav
notebooks/: 02.feature-engineering-&-feature-selection.ipynb  03.naive-model.ipynb  04.ols-model.ipynb  05.arma-model.ipynb  06.ardl-model.ipynb  07.knn-model.ipynb  08.svr-model.ipynb  09.final-comparison-and-summary.ipynb  10.exercise.ipynb  10.homework-random-forest-model.ipynb
