[project]
name = "ml-in-finance-i-case-study-forecasting-tax-avoidance-rates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boruta>=0.4.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mlxtend>=0.23.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pmdarima>=2.0.4",
    "relieff>=0.1.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
